[package]
name = "print-rs"
version = "0.1.0"
authors = ["Aleksi Wikman <aleksi.wikman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fantoccini = "0.14.0"
fantoccini = { path = "/home/aleksi/Projects/fantoccini", version = "0.14.0"}
webdriver = "0.41.0"
serde_json = "1.0"

[dependencies.tokio]
version = "0.2.22"
features = ["macros", "time"] # macros is needed for #[tokio::main], time is for needed for delay_for